// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DateSelector > should render correctly when disabled 1`] = `
<div
  className=""
>
  <div
    className="govuk-date-input flex items-center"
    id="start-date"
  >
    <div
      className="govuk-date-input__item govuk-!-margin-right-0"
    >
      <div
        className="govuk-form-group"
      >
        <input
          className="govuk-input govuk-date-input__input govuk-input--width-6  "
          disabled={true}
          id="undefinedstart-day-input"
          name="startDateDay"
          onChange={[Function]}
          placeholder="dd/mm/yyyy"
          type="tel"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
    >
      <button
        aria-label="Choose date"
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1oorrbo-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="CalendarIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`DateSelector > should render correctly with an input 1`] = `
<div
  className=""
>
  <div
    className="govuk-date-input flex items-center"
    id="start-date"
  >
    <div
      className="govuk-date-input__item govuk-!-margin-right-0"
    >
      <div
        className="govuk-form-group"
      >
        <input
          className="govuk-input govuk-date-input__input govuk-input--width-6  "
          disabled={false}
          id="undefinedstart-day-input"
          name="startDateDay"
          onChange={[Function]}
          placeholder="dd/mm/yyyy"
          type="tel"
          value="01/01/2023"
        />
      </div>
    </div>
    <div
      className="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
    >
      <button
        aria-label="Choose date, selected date is Jan 1, 2023"
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1oorrbo-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="CalendarIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
          />
        </svg>
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`DateSelector > should render correctly with no input 1`] = `
<div
  className=""
>
  <div
    className="govuk-date-input flex items-center"
    id="start-date"
  >
    <div
      className="govuk-date-input__item govuk-!-margin-right-0"
    >
      <div
        className="govuk-form-group"
      >
        <input
          className="govuk-input govuk-date-input__input govuk-input--width-6  "
          disabled={false}
          id="undefinedstart-day-input"
          name="startDateDay"
          onChange={[Function]}
          placeholder="dd/mm/yyyy"
          type="tel"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
    >
      <button
        aria-label="Choose date"
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1oorrbo-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="CalendarIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
